[package]
name = "stringmetrics"
version = "1.0.2"
edition = "2021"
authors = ["Trevor Gross <tmgross@umich.edu>"]
description = "Rust library for approximate string matching and spellchecking"
# This won't auto link for some reason, no harm in having it manual
documentation = "https://docs.rs/stringmetrics"
readme = "README.md"
repository = "https://github.com/pluots/stringmetrics-rust"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["spellcheck", "spelling", "levenshtein"]
categories = ["algorithms", "text-processing"]


[badges]
maintenance = { status = "actively-developed" }

# [lib]
# name = "mylib"
# path = "src/lib.rs"

# [[bin]]
# name = "mybin"
# path = "src/bin.rs"

[dependencies]
# itertools = "0.10.3"
# isolang = "2.1.0"
futures = "0.3"             # async tools
lazy_static = "1.4"         # late-evaluated statics
regex = "1"                 # rust core regex
# This crate's proc macros (unused)
stringmetrics-derive = { path = "stringmetrics-derive" }
# Enum ser/des operations
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"        # Macros for ser/de
# Splitting on graphemes rather than chars
unicode-segmentation = "1.9.0"


[dev-dependencies]
#
criterion = "0.3"

[[bench]]
name = "dict_datastructure"
harness = false


[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
