[workspace]

members = [
    "crates/stringmetrics",
    "crates/stringmetrics_py",
    "crates/stringmetrics_bin_bench"
    ]


# Build with `cargo build --profile=release-debug`
# Useful for profiling, not for official releases
[profile.release-debug]
inherits = "release"
debug = true

# Sample profiling commands:
# sudo perf record -e cycles -c 500 ./target/release-debug/stringmetrics_bin_bench 5
# sudo perf annotate

# Or with valgrind/kcachegrind
# valgrind --tool=callgrind --dump-instr=yes --collect-jumps=yes \
# --simulate-cache=yes target/release-debug/stringmetrics_bin_bench 
