[package]
name = "stringmetrics"
version = "2.1.1"
edition = "2018"
authors = ["Trevor Gross <tmgross@umich.edu>"]
description = "Rust library for approximate string matching"

# Note: these are symlinked from top level
readme = "README.md"
license-file = "LICENSE"

documentation = "https://docs.rs/stringmetrics"
repository = "https://github.com/pluots/stringmetrics"

keywords = ["levenshtein"]
categories = ["algorithms", "text-processing"]

[badges]
maintenance = { status = "actively-developed" }

# Config for the rust-usable library and the executable binary
[lib]
name = "stringmetrics"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.3"
assert_cmd = "2.0"
predicates = "2.1"

[[bench]]
name = "lev_bench"
harness = false

[[bench]]
name = "iter_bench"
harness = false

[[bench]]
name = "iter_match_bench"
harness = false


[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[package.metadata.release]
shared-version = true

# Can't run replacements at workspace root. Need to use this "hacky" sort of way.
[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "<!-- next-header -->"
replace = """\
  <!-- next-header -->\n\n\
  ## [Unreleased] - ReleaseDate\n\n\
  ### Added\n\n\
  ### Changed\n\n\
  ### Removed\n\n\
  """
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "<!-- next-url -->"
replace = """\
  <!-- next-url -->\n\
  [Unreleased]: https://github.com/pluots/stringmetrics/compare/{{tag_name}}...HEAD\
  """
exactly = 1
