[package]
name = "stringmetrics_py"
version = "2.1.0"
edition = "2018"
publish = false
# Limitation of parking-lot from pyo3
rust-version = "1.49"

readme = "README.md"
# Note: this is symlinked from top level
license-file = "LICENSE"

[lib]
name = "stringmetrics"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
stringmetrics = { path = "../stringmetrics" }

[build-dependencies]
pyo3-build-config = "0.16"

[package.metadata.release]
shared-version = true
